lintian (2.2.14) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - patch-system-but-no-source-readme

  * checks/fields{,.desc}
    + [FL] packages named lib*-camlp4-dev should be in section ocaml
    + [RA] Move debian/rules parsing to check build dependencies to
      checks/rules.
  * checks/rules{,.desc}:
    + [RA] Moved checking of build dependencies based on programs invoked
      in debian/rules from checks/fields to here.
    + [RA] Expand Lintian's understanding of which targets are run for the
      clean target to include targets invoked via pattern variable
      expansion.  (Closes: #536405)
  * checks/patch-systems{,.desc}:
    + [RA] Check for a patch system in use but no debian/README.source.
      Based on a patch from Jonathan Yu.  (Closes: #537969)
  * checks/scripts:
    + [RA] Fix parsing of dpkg-divert commands diverting a file ending in
      a number, followed by a redirection.  Thanks, Andreas Beckmann.
      (Closes: #534942)

  * lib/Spelling.pm:
    + [RA] Add spelling correction for precedence.

 -- Frank Lichtenheld <djpig@debian.org>  Sun, 12 Jul 2009 12:57:44 +0200

lintian (2.2.13) unstable; urgency=low

  The "triggerized install-info" release.

  * Summary of tag changes:
    + Added:
      - install-info-used-in-maintainer-script
      - package-contains-info-dir-file
    + Removed:
      - info-documents-not-removed
      - install-info-not-called-with-quiet-option
      - missing-comma-after-substvar
      - postrm-calls-install-info
      - preinst-calls-install-info

  * checks/control-file{,.desc}:
    + [RA] Rework missing-separator-between-lines to only include two
      specific package stanzas in the extra tag data and not include
      newlines.  Generalize it to also detect missing commas between
      substvars, replacing missing-comma-after-substvar.
  * checks/cruft{,.desc}:
    + [RA] Don't warn about outdated libtool if the package build-depends