@@ -4,6 +4,9 @@ lintian (2.2.14) unstable; urgency=low
     + Added:
       - patch-system-but-no-source-readme
 
+  * checks/description:
+    + [RA] Decode descriptions from UTF-8 before checking length.  Thanks,
+      Charles Plessy.  (Closes: #537207)
   * checks/fields{,.desc}
     + [FL] packages named lib*-camlp4-dev should be in section ocaml
     + [RA] Move debian/rules parsing to check build dependencies to
